--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <h2>Nishi</h2>
         <p>VU,Rajshahi</p>
     </section>
+    <section>
+        <h3>Age: 21 years old</h3>
+        <p>Computer science department</p>
+    </section>
 </body>
 </html>
