added skill section

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
         <h2>Nishi</h2>
         <p>VU,Rajshahi</p>
     </section>
+ 
+
     <section>
-        <h3>Age: 21 years old</h3>
-        <p>Computer science department</p>
+        <h3>Skill Section</h3>
+       <ul>
+        <li>C programming</li>
+        <li>C++</li>
+       </ul>
     </section>
 </body>
 </html>
