added one more skill from skill3 branch

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li>C programming</li>
         <li>C++</li>
         <li>Java</li>
+        <li>Trelo project management</li>
        </ul>
     </section>
 </body>
