added another skill from main branch

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li>C programming</li>
         <li>C++</li>
         <li>Java</li>
+        <li>Ms Word, Ms excell</li>
        </ul>
     </section>
 </body>
